flask-yamls/flask-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: flask-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: docker-ortuser11.octopus.lab/flask-app/flask-app:latest
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: docker-secret
