flask-yamls/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-servive
  namespace: flask-namespace
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
