flask-yamls/flask-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app
  namespace: flask-namespace
  annotations:
spec:
  ingressClassName: nginx
  rules:
    - host: flask-app.ortuser11.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-app-servive
                port:
                  number: 80
